--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.11.16",
     "@types/pg": "^8.11.0",
     "@types/yamljs": "^0.2.34",
